@@ -1,2 +1,2 @@
 #!/bin/sh
-java -Xmx512M -jar `dirname $0`/sbt-launch.jar "$@"
+java -Dfile.encoding=UTF8 -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m -jar `dirname $0`/sbt-launch.jar "$@"
